--- a/InfosPlugin/InfosPlugin.csproj
+++ b/InfosPlugin/InfosPlugin.csproj
@@ -38,17 +38,21 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\DLLs\Microsoft.Xna.Framework.Graphics.dll</HintPath>
     </Reference>
-    <Reference Include="o!RAInterface">
-      <HintPath>..\DLLs\o!RAInterface.dll</HintPath>
+    <Reference Include="o!RAInterface, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\o!RAInterface\obj\Debug\o!RAInterface.dll</HintPath>
     </Reference>
-    <Reference Include="o!RAResources">
-      <HintPath>..\DLLs\o!RAResources.dll</HintPath>
+    <Reference Include="o!RAResources, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\o!RAResources\obj\Debug\o!RAResources.dll</HintPath>
     </Reference>
-    <Reference Include="osu!BMAPI">
-      <HintPath>..\DLLs\osu!BMAPI.dll</HintPath>
+    <Reference Include="osu!BMAPI, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\osu!BMAPI\obj\Debug\osu!BMAPI.dll</HintPath>
     </Reference>
-    <Reference Include="osu!ReplayAPI">
-      <HintPath>..\DLLs\osu!ReplayAPI.dll</HintPath>
+    <Reference Include="osu!ReplayAPI, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\osu!ReplayAPI\osu!ReplayAPI\obj\Debug\osu!ReplayAPI.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
